от 02.04.2020 - структура сайта в html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,8 +6,173 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DiplomMQ-22</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<p>Hello!</p>
+    <header class="header">
+        <div class="logo-text">
+            <img src="svg/surface_logo_text.svg" alt="Logo Surface">
+        </div>
+        <div class="header-title">
+            <h1 class="welcome-title">
+                <span>Be recruited</span>
+                <span>play college sports</span>
+            </h1>
+        </div>
+        <div class="links">
+            <div class="link">
+                <a class="link-app" href="#">
+                    <span>Download on the</span>
+                    <span>App store</span>
+                </a>
+            </div>
+            <div class="link">
+                <a class="link-google" href="#">
+                    <span>Get it on</span>
+                    <span>Google play</span>
+                </a>
+            </div>
+        </div>
+    </header>
+    <main class="main">
+        <section class="section">
+            <div class="section-image">
+                <picture>
+                    <img class="image-footballer" src="images/footballer_566.png" alt="Footballer">
+                </picture>
+            </div>
+            <div class="section-text">
+                <div class="section-title">
+                    <h2 class="title-athlets">Athlets</h2>
+                </div>
+                <div class="section-list">
+                    <ol class="list-athlets">
+                        <li class="list-connection">
+                            <h3 class="list-title">Connection</h3>
+                            <p class="list-text">
+                                Connect with coaches directly, you can ping coaches to view profile.
+                            </p>
+                        </li>
+                        <li class="list-collaboration">
+                            <h3 class="list-title">Collaboration</h3>
+                            <p class="list-text">
+                                Work with other student athletes to  increase visability.
+                                When you share and like other players videos it will increase your visability as a player.
+                                This is the team work aspect to Surface 1.
+                            </p>
+                        </li>
+                        <li class="list-growth">
+                            <h3 class="list-title">Growth</h3>
+                            <p class="list-text">
+                                Resources and tools for you to get better as a student Athelte.
+                                Access to training classes, tutor sessions, etc.
+                            </p>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+        <section class="section">
+            <div class="section-image">
+                <picture>
+                    <img class="image-players" src="images/basketballer_991.png" alt="Basketballer">
+                </picture>
+            </div>
+            <div class="section-text">
+                <div class="section-title">
+                    <h2 class="title-players">Players</h2>
+                </div>
+                <div class="section-list">
+                    <ol class="list-players">
+                        <li class="list-connection">
+                            <h3 class="list-title">Connection</h3>
+                            <p class="list-text">
+                                Connect with talented athlete directly, you can watch their skills through video
+                                showreels directly from Surface 1.
+                            </p>
+                        </li>
+                        <li class="list-collaboration">
+                            <h3 class="list-title">Collaboration</h3>
+                            <p class="list-text">
+                                Work with recruiter to increase your chances of findingtalented athlete.
+                            </p>
+                        </li>
+                        <li class="list-growth">
+                            <h3 class="list-title">Growth</h3>
+                            <p class="list-text">
+                                Save your time, recruit proper athlets for your team.
+                            </p>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+        <section class="section">
+            <div class="section-list">
+                <ol class="list-steps">
+                    <li class="list-be__active">
+                        <div class="steps-text">
+                            <h3 class="list-title-steps">Be active</h3>
+                            <p class="list-text-steps">
+                                Post videos with your skills. Like and follow others to be more popular.
+                            </p>
+                        </div>
+                        <div class="steps-image">
+                            <img src="images/be-active_1024.jpg" alt="Busy human">
+                        </div>
+                    </li>
+                    <li class="list-find__contact">
+                        <div class="steps-text">
+                            <h3 class="list-title-steps">Find contact</h3>
+                            <p class="list-text-steps">
+                                Contact others to find right coach or athlete you are looking for.
+                            </p>
+                        </div>
+                        <div class="steps-image">
+                            <img src="images/find-contact_1024.jpg" alt="Coach and team">
+                        </div>
+                    </li>
+                    <li class="list-work__it">
+                        <div class="steps-text">
+                            <h3 class="list-title-steps">Work it</h3>
+                            <p class="list-text-steps">
+                                Enjoy being a student athlete, the recruiting process can be overwheiming,
+                                we want to make this enjoyable experience.
+                            </p>
+                        </div>
+                        <div class="steps-image">
+                            <img src="images/work-it_1024.jpg" alt="Team win">
+                        </div>
+                    </li>
+                </ol>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="footer-logo">
+            <img class="logo" src="svg/surface_logo.svg" alt="Logo Surface">
+        </div>
+        <div class="footer-text">
+            <span>Download app</span>
+            <span>Show everyone what you can do!</span>
+        </div>
+        <div class="links">
+            <div class="link">
+                <a class="link-app" href="#">
+                    <span>Download on the</span>
+                    <span>App store</span>
+                </a>
+            </div>
+            <div class="link">
+                <a class="link-google" href="#">
+                    <span>Get it on</span>
+                    <span>Google play</span>
+                </a>
+            </div>
+            <div class="logo-text">
+                <img src="svg/surface_logo_text.svg" alt="Logo Surface">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
